Vaesen/vaesen_sheet.css
/* ... */
.sheet-footer-image2 {
    background-color: transparent; /*transparent */
    background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Vaesen/Images/footer2.png");
    background-repeat: no-repeat;
    background-size: contain;
    grid-area: footer2;
}
.sheet-footer-image3 {
    background-color: transparent; /*transparent */
    background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Vaesen/Images/footer2.png");
    background-repeat: no-repeat;
    background-size: contain;
    grid-area: footer3;
}
.sheet-areaheader {
    text-align: center;
    background-color: rgba(109, 109, 109, 0.5);
    font-style:italic;
    font-size:medium;
    color:#4a2e22;
}
.sheet-biglabel{
    padding-right:1em;
    font-size:medium;
    color:#4a2e22;
}
.sheet-normallabel{
    padding-right:1em;
    color:#4a2e22;
    font-size:small;
    font-weight:bold;
}
.sheet-normallabel-nb{
    padding-right:1em;
    color:#4a2e22;
    font-size:small;
    font-weight:normal;
}
.sheet-longtext {
    width: 45em;
}
.sheet-longtext2 {
    width: 40em;
}
.sheet-med2text{
    width:28em;
}
.sheet-medtext {
    width:20em;
}
.sheet-medtext2 {
    width:19em;
}
.sheet-shorttext2{
    width:15em;
}
.sheet-shorttext {
    width: 10em;
}
.sheet-tinytext {
    width: 4em;
}
.sheet-vaesentextarea{
    height:30px;
    resize: none;
}
.sheet-HQupradetextarea{
    height:5em;
    width:25em;
}
.sheet-HQtextarea{
    height:20em;
    resize: none;
}

.sheet-NPCtextarea{
    height:60px;
    resize: none;
}

.sheet-attribtext {
    width: 3em;
}
.sheet-attriblabel {
    font-size: small;
}
.sheet-attribtable {
    font-weight: bold;
    padding: 5px;
    font-size: large;
    color:#4a2e22;
}
.sheet-nametext{
    width: 15em;
    font-size:x-large;
    color:#4a2e22;
}
.sheet-nametext-med{
    width: 10em;
    font-size:xx-large;
    color:#4a2e22;
}
.sheet-resourcetext{
    width: 3em;
    font-size:x-large;
    text-align:center;
    color:#4a2e22;
}
.sheet-widebutton{
    width:50px;
}

/* PC-GridAreas*/
.sheet-footergraphic {
    grid-area: footer;
}
.sheet-leftbody {
    grid-area: body-left;
}
.sheet-rightbody {
    grid-area: body-right;
}
.sheet-rightcolumn {
    grid-area: skills;
}
.sheet-item-e {
    grid-area: verticalrule;
}
.sheet-charactername {
    grid-area: header-name;
}
.sheet-wideequipment {
    grid-area: equipment;
}
.sheet-leftstats{
    grid-area:stats-left;
}
.sheet-rightstats{
    grid-area:stats-right;
}
.sheet-mainspanning {
    grid-area: spanning;
}

/* Vaesen-GridAreas */
.sheet-LeftVaesen {
    grid-area: Vaesen-Left;
}
.sheet-RightVaesen {
    grid-area: Vaesen-Right;
}
.sheet-VaesenAbilities {
    grid-area: Vaesen-Abilities;
}
.sheet-VaesenName {
    grid-area: Vaesen-Name;
}

/* NPC-GridAreas */
.sheet-NPCName {
    grid-area: NPC-Name;
}
.sheet-NPCAttribs {
    grid-area: NPC-Attribs;
}
.sheet-NPCSkills {
    grid-area: NPC-Skills;
}
.sheet-NPCEquip {
    grid-area: NPC-Equipment;
}
.sheet-NPCMisc {
    grid-area: NPC-Misc;
}
/* HQ-GridAreas */

.sheet-HQimage {
    background-color: transparent; /*transparent */
    background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Vaesen/Images/VaesenLogo.png");
    background-repeat: no-repeat;
    background-size: contain;
    grid-area: HQ-image;
}
.sheet-HQhistory {
    grid-area: HQ-history;
}
.sheet-HQheader {
    grid-area: HQ-header;
}
.sheet-HQupgrades {
    grid-area: HQ-upgrades;
}
.sheet-HQleftupgrades {
    grid-area: HQ-leftupgrades;
}
.sheet-HQrightupgrades {
    grid-area: HQ-rightupgrades;
}

/*PC Sheet Layout*/
.sheet-tabstoggle[value="main"] ~ div.sheet-main {
    display: grid;
    width: 833px;
    border: 1px solid black;
    grid-template-columns: [gutter] 1em [Body-Left] 20em [Body-Right] 20em [break] 20px [skills] 15em [gutter] 1em;
    grid-template-rows: [gutter] 2em [Name] auto [stats] 15em [spanning] 3em [Body] auto [equipment] auto [Footer] 5em [gutter] 2em;
    grid-template-areas:
        ". . . . . ."
        ". header-name header-name verticalrule header-right ."
        ". stats-left stats-right verticalrule skills ."
        ". spanning spanning verticalrule skills ."
        ". body-left body-right verticalrule skills ."
        ". equipment equipment . skills ."
        ". footer footer2 footer2 footer3 ."
        ". . . . . .";
    grid-gap: 10px;
    background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Vaesen/Images/vasen_background.jpg"); /*Desaturated Paper Teture*/
    background-repeat: repeat;
    background-size: cover;
}

/*NPC Sheet Layout*/
.sheet-tabstoggle[value="NPC"] ~ div.sheet-NPC {
    display: grid;
    width: 732px;
    border: 1px solid black;
    grid-template-columns: [gutter] auto [Body-Left] 25em [break] 20px [body-right] 20em [gutter] auto;
    grid-template-rows: [gutter] 5px [Name] auto [Attribs] auto [Skills] auto [Notes] auto [gutter] 5px;
    grid-template-areas:
        ". . . . ."
        ". NPC-Name NPC-Name NPC-Name ."
        ". NPC-Attribs . NPC-Equipment . "
        ". NPC-Skills . NPC-Equipment ."
        ". NPC-Misc NPC-Misc NPC-Misc ."
        ". . . . .";
    grid-gap: 10px;
    background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Vaesen/Images/vasen_background.jpg"); /*Desaturated Paper Teture*/
    background-repeat: repeat;
    background-size: cover;
}
/* ... */

